Created attachment 103690 [details] Screenshot shows extra long Find Bar Problem description: Useless waste of place with strange view if Find Bar exceeds Window at the right Steps to reproduce: 1. Open new empty Writer Document 2. <control+f> for Find bar 3. Rightclick Find bar ► Customize » At the end of the items list you find an empty entry I can't find out for what that might be I think the problem appeared with "The Navigation buttons have been moved from below the scrollbar to the Find bar" Operating System: Windows 7 Version: 4.3.0.3 rc Last worked in: 4.2.5.2 release
reproducible with LO 4.3.0.4 (Win 8.1) The attached screenshot is only reproducible if the Find Toolbar is (is moved) at the top next to the other toolbars (the toolbar is then shortened and showing the arrows). If this toolbar is at the bottom or on a separate line then you will not see the arrows at the right. But even if the toolbar is at the bottom or separate line it is reproducible in another way by: 1. Right click on the Find Toolbar 2.1.1. Select CUSTOMIZE TOOLBAR 2.1.2. Scroll the TOOLBAR CONTENT to the end or 2.2.1. Go to VISIBLE BUTTONS There you will find an empty entry.
I did observing with Calc & agree it's a strange behavior, don't know if that behavior has particular intention. Confirmed those behavior explained in comment 0 and comment 1 with LO 4.3.1.1 - Ubuntu 12.04 x86
Remove 'NeedAdvice' from whiteboard now that this is marked as NEW.
one could possibly think that this has to do with translation ?? But not that much IMO
Ah, it's used to display "Item not found" or somesuch :)
Indeed, the area is for messages "reached end of page", "not found" and may be others. Useful feature, but such an empty area is worrying, and the message looks equal to "Find All", what is a button. So * Design of message area should be different from button area. * add Tooltip due to "Bug 85952 - Tooltip missing for new Message area in find bar"
Also related to "Bug 85953 - Missing Item Text for Find Bar Message Field" I think no bibisect is required, this simply is a new, still incomplete feature.
*** Bug 85953 has been marked as a duplicate of this bug. ***
The below commit is where this feature was implemented Adding Cc: to matus@libreoffice.org. Could you possibly take a look at this and see if there is an obvious way not to show the find message space as though it were an overflowed button? Thanks commit f25cdaa78d5e7d200fbaf31cce9895bab7c5ee63 Author: Matúš Kukan <matus.kukan@collabora.com> Date: Tue Feb 4 15:46:41 2014 +0100 fdo#74132: Do not interrupt search in Writer. Instead of "Do you want to continue at the beginning?" dialog, just inform that we were at the end of the document in new label. Also replace 'Search key not found' dialog with label. Change-Id: I6a140cbad93406b73996f87a6d05fcc5d245fdbf
Adding bibisected to whiteboard as bisected keyword is a subset of bibisected whiteboard. Thanks!
Andras Timar committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=9fd38a52e1663addfc6f0581543a066592d3570d add label to .uno:SearchLabel (related: fdo#81925) It will be available in 4.5.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
My patch adds a label to .uno:SearchLabel, so at least we will see something in Customize dialog. It makes little sense to switch off this placeholder, because then the messages will be written at the left edge of the toolbar, which looks ugly. It should not be configurable.
Migrating Whiteboard tags to Keywords: (bibisected) [NinjaEdit]
Hello, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?
nope - still a huge empty space at the right in Versie: 5.1.5.2 Build ID: 7a864d8825610a8c07cfc3bc01dd4fce6a9447e5 CPU Threads: 4; Versie besturingssysteem:Linux 4.4; UI Render: standaard; Locale: nl-NL (nl_NL.UTF-8); Calc: group and Version: 5.3.0.0.alpha0+ Build ID: 1ef48f3bebe80a386490e2a0f8fd0ae40de07ada CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-09-18_23:46:24 Locale: nl-NL (nl_NL.UTF-8); Calc: group
*** Bug 95665 has been marked as a duplicate of this bug. ***
Here is a patch that shows search messages in the find bar overflow toolbar when clicking on the >> button https://gerrit.libreoffice.org/#/c/51523/
(In reply to Jim Raykowski from comment #17) > Here is a patch that shows search messages in the find bar overflow toolbar > when clicking on the >> button > > https://gerrit.libreoffice.org/#/c/51523/ I confirm it works ("Reached the end of document"). Arch Linux 64-bit Version: 6.1.0.0.alpha0+ Build ID: c70471a0f984f1c5be7cb5eeaf88e71b17c903ee CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; Locale: fi-FI (fi_FI.UTF-8); Calc: group Built on March 19th 2018
Jim Raykowski committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=464d95eca4e2febc0268fe3833f0596bb4ced005 tdf#81925 Make messages show in Findbar searchlabel overflow toolbar It will be available in 6.1.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
In addition to the patch made to display messages in the overflow tool bar >> , there is also a patch for dynamically sizing the message (bug 116956) which provides for only the amount of space needed for the message to be displayed to be used. Customized toolbar items and toolbars placed after the message area adjust according to message size. I am setting this to resolved fixed.