tdf#81925 Make messages show in Findbar searchlabel overflow toolbar

...and add a bit more horizontal space for messages

Change-Id: I4a310d7a4a649860a36ce12b775bb6b275cd6ef5
Reviewed-on: https://gerrit.libreoffice.org/51523
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>